--- a/css/main.css
+++ b/css/main.css
@@ -185,17 +185,25 @@ ul {
     margin: 10px 0;
     border: 2px solid #544838;
 }
-
 .relative {
     /* add relative properties here */
+    position: relative;
+    top: 40px;
+    right: 20px;
 }
 
 .relative-2 {
     /* add relative-2 properties here */
+    position: relative;
+    /* top: 0;
+    right: 0; */
 }
 
 .absolute {
     /* add absolute properties here */
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .absolute-2 {
@@ -203,6 +211,9 @@ ul {
     height: 75px;
     border: 2px solid #a89070;
     /* add absolute-2 properties here */
+    position: absolute;
+    right: 0;
+    bottom: -10px;
 }
 
 .absolute-2 .box-paragraph {
@@ -213,6 +224,9 @@ ul {
 
 .fixed {
     /* add fixed properties here */
+    position: fixed;
+    top: 50%;
+    right: 0;
 }
 
 
